<resources>
    <string name="app_name">BeFake</string>
    <string name="logo">BeFake. logo</string>
    <string name="username">username</string>
    <string name="username_lorem">randomusername567</string>
    <string name="username_tag">\@randomusername567</string>
    <string name="full_name">full name</string>
    <string name="full_name_lorem">Sadie Sampleman</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="befake_logo">BeFake logo</string>
    <string name="register">REGISTER</string>
    <string name="email">email</string>
    <string name="biography">biography</string>
    <string name="biography_lorem">This is my biography hello everyone!</string>
    <string name="location">location</string>
    <string name="add_user_button">Add user button</string>
    <string name="profile_picture_in_a_circle">profile picture in a circle</string>
    <string name="error_sign">error sign</string>
    <string name="error_message">error message</string>
    <string name="error">ERROR! Something unexpected happened</string>
    <string name="success">SUCCESS</string>
    <string name="success_sign">success sign</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="post_new_befake">Post a BeFake</string>
    <string name="posted_ago">23min late</string>
    <string name="settings_button">settings button</string>
    <string name="main_photo">main photo</string>
    <string name="description">description</string>
    <string name="add_description">Add description</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="see_comments">See n comment</string>
    <string name="reaction_icon">reaction icon</string>
    <string name="comment_icon">comment icon</string>
    <string name="left_arrow_button">left arrow button</string>
    <string name="joined_at">Joined BeFake in September 2022</string>
    <string name="calendar_icon">calendar icon</string>
    <string name="edit_my_profile">Edit my profile</string>
    <string name="your_memories">Your Memories</string>
    <string name="only_visible_to_you">Only visible to you.</string>
    <string name="tba">TBA</string>
    <string name="location_icon">location icon</string>
    <string name="location_lorem">Budapest, Hungary</string>
    <string name="description_lorem">This is a nice description of a nice photo ❤️ Also, this description takes up a little more space than one line</string>
    <string name="check_button">check button</string>
    <string name="placeholder">placeholder</string>
    <string name="camera_icon">camera icon</string>
    <string name="logout">logout</string>
    <string name="clear_cache">clear cache</string>
    <string name="friends">Friends</string>
    <string name="add_friends">Add friends</string>
    <string name="my_friends">My friends</string>
    <string name="search_button">search button</string>
    <string name="search_by_username">Search by Username</string>
    <string name="add">Add</string>
    <string name="search_results">Search results</string>
    <string name="confirm">confirm</string>
    <string name="remove_friend_button">remove friend button</string>
    <string name="friend_requests">Friend requests</string>
    <string name="friend_list">Friends</string>
    <string name="no_friends_message">Search for friends so you can share your moments with them!</string>
    <string name="reactions">Reactions</string>
    <string name="comments">Comments</string>
    <string name="interactions">Interactions</string>
    <string name="comment_lorem">In publishing and graphic design, Lorem ipsum is a placeholder text. In publishing and graphic design, Lorem ipsum is a placeholder text</string>
    <string name="remove_comment_button">remove comment button</string>
    <string name="delete_this_comment">Delete this comment</string>
    <string name="send">Send</string>
    <string name="add_comment">Add comment...</string>
</resources>