<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="1dp"
    android:background="@color/black">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/commenter_profile_picture"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp"
        android:src="@drawable/profile_placeholder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/commenter_name"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/username_lorem"
        android:textColor="@color/light_grey"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/commenter_profile_picture"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/comment_text"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="15dp"
        android:text="@string/comment_lorem"
        android:textColor="@color/light_grey"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/commenter_profile_picture"
        app:layout_constraintTop_toBottomOf="@id/commenter_name" />

    <TextView
        android:id="@+id/late_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="10dp"
        android:text="@string/posted_ago"
        android:textColor="@color/medium_grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/commenter_profile_picture"
        app:layout_constraintTop_toBottomOf="@id/comment_text" />

</androidx.constraintlayout.widget.ConstraintLayout>