<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.FriendFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/friends_toolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/primary"
        android:textAlignment="center"
        android:padding="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:background="@drawable/underline_dark"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_marginVertical="15dp"
                android:contentDescription="@string/left_arrow_button"
                android:src="@drawable/ic_arrow_left_solid" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/friends"
                android:textColor="@color/light_grey"
                android:textSize="25sp"
                android:textStyle="normal" />

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/page_navigator"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/primary"
        android:backgroundTint="@color/primary"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/friends_toolbar">

        <TextView
            android:background="@drawable/underline_thick"
            android:id="@+id/add_friends_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|bottom"
            android:padding="10dp"
            android:text="@string/add_friends"
            android:textColor="@color/light_grey"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/my_friends_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:background="@drawable/underline_dark"
            android:id="@+id/my_friends_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|bottom"
            android:padding="10dp"
            android:text="@string/my_friends"
            android:textColor="@color/light_grey"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/add_friends_button"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/friend_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/page_navigator" />

</androidx.constraintlayout.widget.ConstraintLayout>